# Deep-crop-mapping

./: .gitignore  README.md  benchmark.ipynb  main.py  pyproject.toml  task.md  test_transformer.py  tui_style.css
DeepCropMapping.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Swin-Transformer/: README.md  Swin_training_and_evaluation.ipynb  __init__.py  dataset.py  evaluate.py  inference.py  model.py  train.py  utils.py
TCN/: README.md  TCN_training_and_evaluation.ipynb  __init__.py  compat.py  dataset.py  evaluate.py  inference.py  model.py  train.py  utils.py
TCN/checkpoints/: data_info.pkl
Transformer/: README.md  Transformer_training_and_evaluation.ipynb  __init__.py  dataset.py  evaluate.py  inference.py  model.py  train.py  utils.py
deepcropmapping/: __init__.py  data_analysis.ipynb  data_visualization.py
deepcropmapping/pre_process/: __init__.py  dimension_checker.py
deepcropmapping/visual/: README_visualization.md  __init__.py  data_visualization.py
